<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_feedback">Send Feedback …</string>
    <string name="album_permission_denied_content">%1$s can not work without photos, please allow access photo in settings</string>
    <string name="album_permission_denied_title">Photo album access denied</string>
    <string name="album_permission_setting">Settings</string>
    <string name="back">Back</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_feedback">Feedback</string>
    <string name="dialog_button_later">Later</string>
    <string name="dialog_button_rating">Rate it 5-star</string>
    <string name="dialog_msg_image_load_error">Please go back to album page and try again</string>
    <string name="dialog_msg_save_error">Can not retrieve image, please try again</string>
    <string name="dialog_msg_share_save_fail">please try again</string>
    <string name="dialog_title_image_load_error">Image load error</string>
    <string name="dialog_title_rating">How do you feel about %1$s?</string>
    <string name="dialog_title_remove_sticker_box">Delete this sticker?</string>
    <string name="dialog_title_remove_text_box">Delete this text box?</string>
    <string name="dialog_title_save_error">Save Image Error</string>
    <string name="dialog_title_share_save_fail">Save photo error!</string>
    <string name="edit_bg_blur">Blur</string>
    <string name="edit_dialog_msg">Do you want to give up the edit?</string>
    <string name="edit_dialog_title">Edit Alert</string>
    <string name="edit_done">DONE</string>
    <string name="edit_process_msg">Style your image…</string>
    <string name="edit_text_label_alignment">Alignment</string>
    <string name="edit_text_label_alpha">Transparent</string>
    <string name="edit_text_label_shadow">Shadow</string>
    <string name="edit_toolbar_bg">Bg</string>
    <string name="edit_toolbar_crop">Crop</string>
    <string name="edit_toolbar_filter">Filter</string>
    <string name="edit_toolbar_retouch">Retouch</string>
    <string name="edit_toolbar_style">Style</string>
    <string name="edit_toolbar_text">Text</string>
    <string name="edit_topbar_txt">Edit</string>
    <string name="hint_add_some_text">add text</string>
    <string name="hint_feedback_mail">Add your feedback below</string>
    <string name="loading">Loading…</string>
    <string name="preview_no_photo">There are no photos in your album, take some now ?</string>
    <string name="preview_toast_photo_not_exist">Photo not exist</string>
    <string name="share_home">Home</string>
    <string name="share_save">Save</string>
    <string name="share_saved">Saved</string>
    <string name="share_title">Share</string>
    <string name="toast_share_save_success">Photo saved to album</string>
    <string name="toast_tap_twice_exist">Tap twice to exit</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">InFrame</string>
    <string name="app_version">1.2.7</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_id">ca-app-pub-1960953175365236/9418130303</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">48f25c5f-45a0-4aff-9da4-7ad1346dd61d</string>
    <string name="crop_ratio_11">1:1</string>
    <string name="crop_ratio_169">16:9</string>
    <string name="crop_ratio_23">2:3</string>
    <string name="crop_ratio_32">3:2</string>
    <string name="crop_ratio_34">3:4</string>
    <string name="crop_ratio_43">4:3</string>
    <string name="crop_ratio_916">9:16</string>
    <string name="crop_ratio_free">Free</string>
    <string name="default_web_client_id">360318157274-q5soadq2g9atfvl25ruu2tlrkv2kh6up.apps.googleusercontent.com</string>
    <string name="email_addr_feedback">Feedback Center &lt;snaperfect@gmail.com&gt;</string>
    <string name="email_subject_feedback">Feedback %1$s Android %2$s</string>
    <string name="email_template_feedback">&lt;p&gt; &lt;small&gt;%1$s&lt;/small&gt;&lt;br/&gt; &lt;small&gt;---------------------------------&lt;/small&gt;&lt;br/&gt; &lt;br/&gt; &lt;br/&gt; &lt;br/&gt; &lt;br/&gt; &lt;small&gt;---------------------------------&lt;/small&gt;&lt;br/&gt; &lt;small&gt;App Name: %2$s&lt;/small&gt;&lt;br/&gt; &lt;small&gt;App Version: %3$s&lt;/small&gt;&lt;br/&gt; &lt;small&gt;Device: %4$s&lt;/small&gt;&lt;br/&gt; &lt;small&gt;OS Version: %5$s&lt;/small&gt;&lt;br/&gt; &lt;/p&gt;</string>
    <string name="firebase_database_url">https://inframe-4844d.firebaseio.com</string>
    <string name="gcm_defaultSenderId">360318157274</string>
    <string name="share_id">ca-app-pub-1960953175365236/1894863508</string>
</resources>