<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/edit_panel_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/crop_operate_bar">
        <com.snaperfect.style.daguerre.crop.CropImageView android:layout_gravity="center" android:id="@+id/crop_image" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/crop_operate_bar" android:background="@color/edit_menu_bg" android:layout_width="match_parent" android:layout_height="132dp" android:layout_alignParentBottom="true">
        <include layout="@layout/menu_title_bar"/>
        <HorizontalScrollView android:id="@+id/crop_scrollview" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/crop_scroll_bar" android:paddingLeft="@dimen/style_left_padding" android:paddingRight="@dimen/style_left_padding" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/crop_top_margin">
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_free_btn" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_free_pre" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_free"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_11_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_1_1_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_11"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_34_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_3_4_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_34"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_23_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_2_3_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_23"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_916_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_9_16_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_916"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_43_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_4_3_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_43"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_32_btn" android:paddingLeft="@dimen/item_padding_left" android:paddingRight="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_3_2_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_32"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/crop_169_btn" android:paddingLeft="@dimen/item_padding_left" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageButton android:background="@mipmap/crop_16_9_nor" android:clickable="false" android:layout_width="@dimen/crop_button_width" android:layout_height="@dimen/crop_button_width"/>
                    <TextView android:textSize="@dimen/item_font_size" android:textColor="@color/edit_bar_status" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/crop_ratio_169"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</RelativeLayout>
